image cropper taking up entire parent div issue fixed

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -281,3 +281,8 @@ font-size:1rem;
     align-items: center;
 }
 
+.imagePreview {
+    position:relative;
+    flex: 1 1;
+    padding:10rem;
+}
